--- a/Calculator.WpfApp/Views/MainWindow.xaml
+++ b/Calculator.WpfApp/Views/MainWindow.xaml
@@ -1,29 +1,38 @@
 ﻿<mah:MetroWindow x:Class="Calculator.WpfApp.MainWindow"
-                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                 xmlns:viewmodels="clr-namespace:Calculator.WpfApp.ViewModels"
-                 xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-                 mc:Ignorable="d"
-                 d:DataContext="{d:DesignInstance Type=viewmodels:MainViewModel}"
+				 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+				 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+				 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+				 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+				 xmlns:viewmodels="clr-namespace:Calculator.WpfApp.ViewModels"
+				 xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+				 mc:Ignorable="d"
+				 d:DataContext="{d:DesignInstance Type=viewmodels:MainViewModel}"
 				 Title="Calculaor"
 				 Height="400"
 				 Width="400"
 				 WindowStartupLocation="CenterScreen">
 
 	<mah:MetroWindow.Resources>
-		<Style TargetType="Button" BasedOn="{StaticResource {x:Type Button}}">
-			<Setter Property="FontSize" Value="26" />
-			<Setter Property="Margin" Value="5" />
+		<Style TargetType="Button"
+			   BasedOn="{StaticResource {x:Type Button}}">
+			<Setter Property="FontSize"
+					Value="26" />
+			<Setter Property="Margin"
+					Value="5" />
 		</Style>
 
-		<Style TargetType="TextBox" BasedOn="{StaticResource {x:Type TextBox}}">
-			<Setter Property="FontSize" Value="46" />
-			<Setter Property="Margin" Value="5" />
-			<Setter Property="HorizontalContentAlignment" Value="Right" />
-			<Setter Property="VerticalContentAlignment" Value="Center" />
-			<Setter Property="IsReadOnly" Value="True" />
+		<Style TargetType="TextBox"
+			   BasedOn="{StaticResource {x:Type TextBox}}">
+			<Setter Property="FontSize"
+					Value="46" />
+			<Setter Property="Margin"
+					Value="5" />
+			<Setter Property="HorizontalContentAlignment"
+					Value="Right" />
+			<Setter Property="VerticalContentAlignment"
+					Value="Center" />
+			<Setter Property="IsReadOnly"
+					Value="True" />
 		</Style>
 	</mah:MetroWindow.Resources>
 
