--- a/Hangman.WpfApp/Views/MainWindow.xaml
+++ b/Hangman.WpfApp/Views/MainWindow.xaml
@@ -1,13 +1,13 @@
 ﻿<mah:MetroWindow x:Class="Hangman.WpfApp.MainWindow"
-                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                 xmlns:converters="clr-namespace:Hangman.WpfApp.Converters"
-                 xmlns:viewmodels="clr-namespace:Hangman.WpfApp.ViewModels"
-                 xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-                 mc:Ignorable="d"
-                 d:DataContext="{d:DesignInstance Type=viewmodels:MainViewModel}"
+				 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+				 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+				 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+				 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+				 xmlns:converters="clr-namespace:Hangman.WpfApp.Converters"
+				 xmlns:viewmodels="clr-namespace:Hangman.WpfApp.ViewModels"
+				 xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+				 mc:Ignorable="d"
+				 d:DataContext="{d:DesignInstance Type=viewmodels:MainViewModel}"
 				 Title="Hangman"
 				 Height="500"
 				 Width="1000"
@@ -19,32 +19,48 @@
 		<Style x:Key="BaseButton"
 			   TargetType="{x:Type Button}"
 			   BasedOn="{StaticResource {x:Type Button}}">
-			<Setter Property="FontSize" Value="15" />
-			<Setter Property="Margin" Value="5" />
-			<Setter Property="Width" Value="150" />
-			<Setter Property="Height" Value="50" />
-			<Setter Property="HorizontalAlignment" Value="Left" />
+			<Setter Property="FontSize"
+					Value="15" />
+			<Setter Property="Margin"
+					Value="5" />
+			<Setter Property="Width"
+					Value="150" />
+			<Setter Property="Height"
+					Value="50" />
+			<Setter Property="HorizontalAlignment"
+					Value="Left" />
 		</Style>
 
 		<Style x:Key="KeyboardButton"
 			   TargetType="{x:Type Button}"
 			   BasedOn="{StaticResource ResourceKey=BaseButton}">
-			<Setter Property="Width" Value="85" />
-			<Setter Property="Height" Value="Auto" />
-			<Setter Property="IsEnabled" Value="False" />
+			<Setter Property="Width"
+					Value="85" />
+			<Setter Property="Height"
+					Value="Auto" />
+			<Setter Property="IsEnabled"
+					Value="False" />
 		</Style>
 
 		<Style x:Key="LetterLabel"
 			   TargetType="{x:Type Label}"
 			   BasedOn="{StaticResource {x:Type Label}}">
-			<Setter Property="FontSize" Value="20" />
-			<Setter Property="Margin" Value="10" />
-			<Setter Property="Width" Value="50" />
-			<Setter Property="Height" Value="50" />
-			<Setter Property="HorizontalContentAlignment" Value="Center" />
-			<Setter Property="VerticalContentAlignment" Value="Center" />
-			<Setter Property="BorderBrush" Value="Black" />
-			<Setter Property="FontWeight" Value="Bold" />
+			<Setter Property="FontSize"
+					Value="20" />
+			<Setter Property="Margin"
+					Value="10" />
+			<Setter Property="Width"
+					Value="50" />
+			<Setter Property="Height"
+					Value="50" />
+			<Setter Property="HorizontalContentAlignment"
+					Value="Center" />
+			<Setter Property="VerticalContentAlignment"
+					Value="Center" />
+			<Setter Property="BorderBrush"
+					Value="Black" />
+			<Setter Property="FontWeight"
+					Value="Bold" />
 		</Style>
 	</mah:MetroWindow.Resources>
 
@@ -81,13 +97,21 @@
 				   Content="{Binding GameStatus}" />
 		</Grid>
 
+		<Image Grid.Row="0"
+			   Grid.Column="1"
+			   Grid.RowSpan="2"
+			   Margin="10"
+			   Source="{Binding HangmanPicture}" />
+
 		<ScrollViewer Grid.Row="1"
 					  Grid.Column="0"
 					  Margin="5"
 					  VerticalScrollBarVisibility="Auto"
 					  HorizontalScrollBarVisibility="Disabled">
+			
 			<ItemsControl ItemsSource="{Binding GuessingLetters}"
 						  Background="{Binding BackgroundColor}">
+				
 				<ItemsControl.ItemsPanel>
 					<ItemsPanelTemplate>
 						<WrapPanel VerticalAlignment="Center"
@@ -282,10 +306,5 @@
 			</Grid>
 		</Border>
 
-		<Image Grid.Row="0"
-			   Grid.Column="1"
-			   Grid.RowSpan="2"
-			   Margin="10"
-			   Source="{Binding HangmanPicture}" />
 	</Grid>
 </mah:MetroWindow>
